# author-institution-city-linkage

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
audit/: CODE_OWNERSHIP_REVIEW.md  EXCLUDED_PRIVATE_FILES.csv  LICENSE_DECISION.md  PUBLIC_RELEASE_QC.md  REDACTION_LOG.md  REMAINING_MANUAL_REVIEW.md  SOURCE_TO_PUBLIC_FILE_MAP.csv  V2_CHANGELOG.md  v0.2.0_release_review.md
config/: README.md  config.example.json  scopus.example.toml
data/: README.md
data/expected_schema/: author_work_institution_schema.json  coverage_summary_schema.json  excluded_records_schema.json  institution_aliases_schema.json  institutions_schema.json  linked_author_institution_city_schema.json  record_level_audit_schema.json  source_comparison_schema.json  source_comparison_summary_schema.json  (+1 more)
docs/: architecture.md  data_dictionary.md  legacy_code_mapping.md  measurement_boundaries.md  methodology.md  module_reference.md  public_release_notes.md  reproducibility.md  scopus_api_and_data_boundaries.md
scripts/: run_affiliation_demo.py  run_city_year_demo.py  run_example_pipeline.py  run_proximity_demo.py  run_scopus_demo.py  run_smoke_test.py
tests/: test_affiliation_linkage.py  test_author_index.py  test_author_paper_bipartite.py  test_city_year_aggregation.py  test_city_year_queries.py  test_cli.py  test_cognitive_proximity.py  test_expected_output_determinism.py  test_lagged_controls.py  test_public_release_safety.py  test_publication_parsers.py  test_source_comparison.py  test_synthetic_pipeline.py
(+69 files in other folders)
