[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scopus-research-data-toolkit"
version = "0.2.0"
description = "Synthetic, public-safe Scopus-oriented research data toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Ran Wang"}]
dependencies = ["pytest>=8"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
